-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.700 2010-01-24 20:35:18 remko Exp $
-----------------------------------------------------------------------------------------

2010-01-24	jluis
	* meca/submeca.c:	Replaced calls to d_atan2() by d_atan2d() since the code expects 
				angles in degrees. Thanks to Dan Scheirer for finding this.  
	* meca/psmeca.c:	Removed out of place and repeated line to compute size in -a option 
	* test/meca:		More meca tests added (from src/meca)

2010-01-21	jluis
	* mgd77/mgd77.c:	Update for 11th generation IGRF - IGRF2010 

-----------------------------------------------------------------------------------------
2010-01-15	pwessel
	* GMT 4.5.2 finalized and released
	* install_gmt, web/Perl scripts:	Offer choice between default, 32-bit, or 64-bit
				compilations.
-----------------------------------------------------------------------------------------

2010-01-14	pwessel
	* gmt_init.c:		Added an #ifdef CYGWIN_LOCALE_TROUBLE so that Cygwin users who
				experience locale issues can compile with -DCYGWIN_LOCALE_TROUBLE
				until we have a better solution.  This can be set by adding the
				--enable-cygloc option when running configure.
2010-01-13	pwessel
	* gmt_init.c:		The .gmtdefaults4 file was assumed to be in UNIX EOL format.
				Now we strip off EOL before checking for blank lines etc.
	* *.c:			Made sure chopping was done consistently in other codes.

2010-01-13	remko
	* psscale.c:		psscale -Bg now correctly produces gridlines using GRID_PEN_PRIMARY.

2010-01-13	jluis
	* gmtdefaults.c:	Replaced free(..) with GMT_free (..) so Win version doesn't crash

2010-01-12	remko
	* job18.*, job24.*:	psxy -Se|E now correctly uses major/minor axis (as in documentation)
				instead of semimajor/minor axis. This required changes in the scripts.
	* clip_ellipse.sh:	---"---
	* example_01.eps:	Local minima and maxima now appear correctly in this example. Was wrong